<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hirtz.florian.matura.ksa.studnetz.activities.settings.securitysettings.SecuritysettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/security_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="#ffffff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_string"
        app:layout_constraintStart_toStartOf="@+id/secsettings_email_et"
        app:layout_constraintTop_toBottomOf="@+id/secsettings_email_et" />

    <EditText
        android:id="@+id/secsettings_oldpw_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="32"
        android:maxLength="32"
        android:hint="@string/oldpassword_string"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/secsettings_email_et"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/secsettings_newpw_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="32"
        android:maxLength="32"
        android:hint="@string/newpassword_string"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/secsettings_oldpw_et"
        app:layout_constraintStart_toStartOf="@+id/secsettings_oldpw_et"
        app:layout_constraintTop_toBottomOf="@+id/secsettings_oldpw_et" />

    <EditText
        android:id="@+id/secsettings_confpw_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="32"
        android:maxLength="32"
        android:hint="@string/confnewpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/secsettings_newpw_et"
        app:layout_constraintStart_toStartOf="@+id/secsettings_newpw_et"
        app:layout_constraintTop_toBottomOf="@+id/secsettings_newpw_et" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/email_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/secsettings_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="254"
        android:maxLength="254"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/secsettings_save_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/savechanges_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secsettings_confpw_et" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/security_string"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/privacy_string"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_toolbar" />
</android.support.constraint.ConstraintLayout>
