<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hirtz.florian.matura.ksa.studnetz.activities.settings.profilesettings.ProfilesettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profilesettings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#ffffff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilesettings_toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="224dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="279dp">

            <EditText
                android:id="@+id/profsettings_description_edittext"
                android:layout_width="0dp"
                android:layout_height="@dimen/descriptionheight"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="255"
                android:maxLength="255"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Spinner
                android:id="@+id/profsettings_school_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_school_textview"
                app:layout_constraintEnd_toStartOf="@id/profsettings_grade_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/profsettings_grade_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_school_textview"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                app:layout_constraintStart_toStartOf="@id/profsettings_grade_spinner"
                app:layout_constraintTop_toTopOf="@id/profsettings_school_textview" />

            <TextView
                android:id="@+id/profsettings_firstname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/surname_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_profilepic_imageview" />

            <EditText
                android:id="@+id/profsettings_firstname_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:ems="18"
                android:maxLength="18"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/profsettings_firstname_textview"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_firstname_textview" />

            <TextView
                android:id="@+id/profsettings_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/name_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_firstname_edittext" />

            <EditText
                android:id="@+id/profsettings_name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:ems="18"
                android:maxLength="18"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/profsettings_name_textview"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_name_textview" />

            <ImageView
                android:id="@+id/profsettings_profilepic_imageview"
                android:layout_width="@dimen/settings_profilepicture"
                android:layout_height="@dimen/settings_profilepicture"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_profile_textview"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/profsettings_school_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/school_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_name_edittext"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_name_edittext" />

            <TextView
                android:id="@+id/profsettings_profile_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/profile_string"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profsettings_subjects_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/subjectsicanassistothersin_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_school_spinner" />

            <CheckBox

                android:id="@+id/profsettings_german_checkbox"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/german_string"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_subjects_textview" />

            <CheckBox
                android:id="@+id/profsettings_french_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_german_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_german_checkbox" />

            <CheckBox
                android:id="@+id/profsettings_music_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_french_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_french_checkbox" />

            <CheckBox
                android:id="@+id/profsettings_maths_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maths_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_biology_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_biology_checkbox" />

            <CheckBox
                android:id="@+id/profsettings_biology_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biology_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_english_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_english_checkbox" />

            <CheckBox
                android:id="@+id/profsettings_spanish_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/spanish_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/profsettings_german_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_subjects_textview" />

            <CheckBox
                android:id="@+id/profsettings_english_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/english_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_subjects_textview" />

            <CheckBox
                android:id="@+id/profsettings_chemics_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chemics"
                app:layout_constraintStart_toStartOf="@+id/profsettings_spanish_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_spanish_checkbox" />

            <CheckBox
                android:id="@+id/profsettings_physics_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/physics_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_chemics_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_chemics_checkbox" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/aboutme_string"
                app:layout_constraintStart_toStartOf="@+id/profsettings_firstname_textview"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_music_checkbox" />

            <Button
                android:id="@+id/profsettings_save_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/savechanges_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profsettings_description_edittext" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/profsettings_profilepicture_floatingactionbutton"
                android:layout_width="@dimen/settings_floatingbutton_size"
                android:layout_height="@dimen/settings_floatingbutton_size"
                android:layout_marginStart="@dimen/settings_floatingbutton_padding"
                android:layout_marginLeft="@dimen/settings_floatingbutton_padding"
                android:layout_marginTop="@dimen/settings_floatingbutton_padding"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="@+id/profsettings_profilepic_imageview"
                app:layout_constraintTop_toTopOf="@+id/profsettings_profilepic_imageview"
                app:srcCompat="@drawable/choose_image_icon" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
